--- a/style.css
+++ b/style.css
@@ -1,5 +1,88 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background: #000000;
+}
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+.container__slider {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.container__slider > input {
+    display: none;
+}
+.container__slider_block {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 0 auto;
+    overflow-x: hidden;
+    max-width: 54vw;
+    padding: 3% 0 5%;
+}
+.container__slider_item {
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.8s;
+}
+.container__slider_item__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5%;
+}
+.container__slider_item__txt {
+    width: 90%;
+    align-self: flex-start;
+    margin-bottom: -7%;
+    margin-top: 3%;
+    padding: 0 5%;
+    font-size: 2.2rem;
+    color: #ffffff;
+}
+.container__slider-pagination {
+    width: 76%;
+    gap: 1.5%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: -3.2%;
+    z-index: 1;
+    padding-bottom: 3%;
+}
+.container__slider-pagination label {
+    width: 2.4rem;
+    height: 2.4rem;
+    background: #FF0000;
+    border-radius: 100vw;
+    cursor: pointer;
+}
+.container__slider-pagination label:hover {
+    background-color: #ffffff;
+}
+#check-2:checked ~ .container__slider-slide .container__slider_item {
+    transform: translateX(-100%);
+}
+#check-3:checked ~ .container__slider-slide .container__slider_item {
+    transform: translateX(-200%);
+}
+#check-4:checked ~ .container__slider-slide .container__slider_item {
+    transform: translateX(-300%);
+}
+#check-5:checked ~ .container__slider-slide .container__slider_item {
+    transform: translateX(-400%);
 }
